cmake_minimum_required(VERSION 3.4 FATAL_ERROR)
project(fs VERSION 0.0.1 LANGUAGES C)

#set(CMAKE_CXX_STANDARD 11)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -D_FILE_OFFSET_BITS=64")
set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -Wall --pedantic -g")
set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/CMake" ${CMAKE_MODULE_PATH})

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_EXPORT_COMPILE_COMMANDS 1)
find_package(FUSE REQUIRED)

include_directories(${FUSE_INCLUDE_DIR})
set(SOURCE_FILES src/bbfs.c src/log.c src/log.h src/bbfs.h)
add_executable(adafs ${SOURCE_FILES} src/bbfs.c)
target_link_libraries(adafs ${FUSE_LIBRARIES})
